<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/Claudiul_Gradient_2"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="585dp"
        android:background="@drawable/button_made"
        android:text="@string/button_start"
        android:textColor="@color/white"
        android:padding="16dp"

        />


    <TextView
        android:layout_marginTop="380dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_title"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        >

    </TextView>

    <ImageView
        android:id="@+id/img"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:layout_marginStart="95dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/Stronk" />
</RelativeLayout>